# godot-cli

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
addons/godot_playwright/: godot_playwright_server.gd  runtime_autoload.gd
docs/: completion-audit.md  protocol.md  release.md
docs/superpowers/plans/: 2026-06-09-stats-module.md  2026-06-10-abilities-module.md  2026-06-11-quests-module.md  2026-06-12-gameplay-events-module.md  2026-06-24-domain-assertions-audio-navigation.md
docs/superpowers/specs/: 2026-06-08-gameplay-module-save-load-design.md  2026-06-09-effects-module-design.md  2026-06-09-interaction-module-design.md  2026-06-09-inventory-module-design.md  2026-06-09-state-machine-module-design.md  2026-06-09-stats-module-design.md  2026-06-10-abilities-module-design.md  2026-06-11-quests-gameplay-module-design.md  2026-06-12-gameplay-events-module-design.md  2026-06-24-domain-assertions-audio-navigation-design.md
examples/agent_workspace/: project.godot
examples/agent_workspace/addons/godot_playwright/: godot_playwright_server.gd
examples/agent_workspace/resources/: agent_profile.tres
examples/agent_workspace/scenes/: main.tscn
examples/agent_workspace/scenes/panels/: status_panel.tscn
examples/agent_workspace/scripts/: main.gd  secondary.gd
examples/agent_workspace/scripts/panels/: status_panel.gd
examples/agent_workspace/scripts/systems/: workspace_state.gd
examples/basic/: project.godot
examples/basic/addons/godot_playwright/: plugin.cfg
examples/basic/scenes/: main.tscn  secondary.tscn
examples/basic/scripts/: main.gd
examples/basic/tests/: test_counter.py  test_editor_expectations.py  test_input.py  test_logs.py  test_navigation.py  test_scene_snapshot.py
examples/basic/tests/__snapshots__/: main.scene.json
gameplay_modules/abilities/: AGENT.md  module.json
gameplay_modules/abilities/addons/abilities/: ability_container.gd  ability_database.gd  ability_definition.gd  ability_result.gd
gameplay_modules/abilities/demo/resources/: repair.tres  scan.tres
gameplay_modules/abilities/demo/scenes/: abilities_demo.tscn
gameplay_modules/dialogue/: AGENT.md  module.json
gameplay_modules/dialogue/tests/: test_dialogue_demo.py
gameplay_modules/effects/: module.json
gameplay_modules/effects/demo/resources/: poison.tres  (+1 more)
gameplay_modules/effects/tests/: test_effects_demo.py
gameplay_modules/gameplay_events/: AGENT.md  README.md  module.json
gameplay_modules/gameplay_events/tests/: test_gameplay_events_demo.py
gameplay_modules/interaction/: AGENT.md  README.md
gameplay_modules/interaction/tests/: test_interaction_demo.py
gameplay_modules/inventory/: AGENT.md  README.md
gameplay_modules/inventory/tests/: test_inventory_demo.py
gameplay_modules/quests/: AGENT.md  README.md  module.json
gameplay_modules/quests/tests/: test_quests_demo.py
gameplay_modules/save_load/: README.md
gameplay_modules/save_load/tests/: test_save_load_demo.py
gameplay_modules/state_machine/: README.md
gameplay_modules/state_machine/tests/: test_state_machine_demo.py
gameplay_modules/stats/: AGENT.md  README.md  module.json
gameplay_modules/stats/tests/: test_stats_demo.py
godot_playwright/: __init__.py  checks.py  cli.py  client.py  codegen.py  design_ui.py  export.py  install.py  inventory.py  locator_index.py  modules.py  probe.py  process.py  project.py  runner.py  scene.py  validate.py  visual.py
godot_playwright/bundled_addons/godot_playwright/: godot_playwright_server.gd  plugin.gd
godot_playwright/bundled_gameplay_modules/abilities/: README.md
godot_playwright/bundled_gameplay_modules/dialogue/: README.md
godot_playwright/bundled_gameplay_modules/effects/: AGENT.md  README.md
godot_playwright/bundled_gameplay_modules/gameplay_events/: AGENT.md  module.json
godot_playwright/bundled_gameplay_modules/interaction/: README.md  module.json
godot_playwright/bundled_gameplay_modules/inventory/: AGENT.md  module.json
godot_playwright/bundled_gameplay_modules/quests/: AGENT.md  README.md  module.json
godot_playwright/bundled_gameplay_modules/save_load/: AGENT.md  module.json
godot_playwright/bundled_gameplay_modules/state_machine/: AGENT.md  README.md  module.json
godot_playwright/bundled_gameplay_modules/stats/: AGENT.md  README.md
skills/godot-coding-skill/: README.md  README.zh-CN.md  SKILL.md  manifest.txt  sources.md
skills/godot-coding-skill/checklists/: code_review.md  pre_delivery.md
skills/godot-coding-skill/examples/: character_stats.gd  health_component.gd  pause_menu.gd  player_controller.gd  scene_router_autoload.gd  test_pause_menu.py
skills/godot-coding-skill/guides/: architecture.md  gdscript_patterns.md  godot_playwright_workflow.md  refactoring_playbook.md  versioning.md
skills/godot-coding-skill/templates/: agent_system_prompt.md  final_response_template.md
tests/: test_checks.py  test_cli.py  test_client.py  test_codegen.py  test_design_ui.py  test_examples.py  test_export.py  test_external_project.py  test_godot_integration.py  test_install.py  test_inventory.py  test_locator_index.py  test_modules.py  test_probe.py  test_process.py  test_runner.py  test_scene.py  test_validate.py  test_visual.py
(+135 files in other folders)
