[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-playwright"
version = "0.1.1"
description = "Playwright-style local automation bridge for Godot editor and runtime."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Playwright contributors" }]
dependencies = []

[project.scripts]
godot-playwright = "godot_playwright.cli:main"

[tool.setuptools]
packages = ["godot_playwright"]

[tool.setuptools.package-data]
godot_playwright = [
  "bundled_addons/godot_playwright/*",
  "bundled_gameplay_modules/save_load/*",
  "bundled_gameplay_modules/save_load/addons/save_load/*",
  "bundled_gameplay_modules/save_load/demo/scenes/*",
  "bundled_gameplay_modules/save_load/demo/scripts/*",
  "bundled_gameplay_modules/save_load/tests/*",
  "bundled_gameplay_modules/inventory/*",
  "bundled_gameplay_modules/inventory/addons/inventory/*",
  "bundled_gameplay_modules/inventory/demo/scenes/*",
  "bundled_gameplay_modules/inventory/demo/scripts/*",
  "bundled_gameplay_modules/inventory/demo/resources/*",
  "bundled_gameplay_modules/inventory/tests/*",
  "bundled_gameplay_modules/state_machine/*",
  "bundled_gameplay_modules/state_machine/addons/state_machine/*",
  "bundled_gameplay_modules/state_machine/demo/scenes/*",
  "bundled_gameplay_modules/state_machine/demo/scripts/*",
  "bundled_gameplay_modules/state_machine/tests/*",
  "bundled_gameplay_modules/interaction/*",
  "bundled_gameplay_modules/interaction/addons/interaction/*",
  "bundled_gameplay_modules/interaction/demo/scenes/*",
  "bundled_gameplay_modules/interaction/demo/scripts/*",
  "bundled_gameplay_modules/interaction/tests/*",
  "bundled_gameplay_modules/effects/*",
  "bundled_gameplay_modules/effects/addons/effects/*",
  "bundled_gameplay_modules/effects/demo/scenes/*",
  "bundled_gameplay_modules/effects/demo/scripts/*",
  "bundled_gameplay_modules/effects/demo/resources/*",
  "bundled_gameplay_modules/effects/tests/*",
  "bundled_gameplay_modules/stats/*",
  "bundled_gameplay_modules/stats/addons/stats/*",
  "bundled_gameplay_modules/stats/demo/scenes/*",
  "bundled_gameplay_modules/stats/demo/scripts/*",
  "bundled_gameplay_modules/stats/demo/resources/*",
  "bundled_gameplay_modules/stats/tests/*",
  "bundled_gameplay_modules/abilities/*",
  "bundled_gameplay_modules/abilities/addons/abilities/*",
  "bundled_gameplay_modules/abilities/demo/scenes/*",
  "bundled_gameplay_modules/abilities/demo/scripts/*",
  "bundled_gameplay_modules/abilities/demo/resources/*",
  "bundled_gameplay_modules/abilities/tests/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
